objects/IP_VCID_Sub_Component__c.object
<CustomObject>
    <fields>
        <fullName>BackendProcessID__c</fullName>
        <description>Inbound data from GTO via AIA
Daily Refresh</description>
        <label>BackendProcessID</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CRM_DID__c</fullName>
        <description>to verify length 30 or 40?</description>
        <label>CRM DID</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Converted_IP_VCID_Component__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Converted IP VCID Component</label>
        <referenceTo>IP_VCID_Component__c</referenceTo>
        <relationshipLabel>IP VCID Sub Component</relationshipLabel>
        <relationshipName>IP_VCID_Sub_Component</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Converted_VCID_Comp_OIC_IP_Component__c</fullName>
        <formula>Converted_IP_VCID_Component__r.OIC_IP_COMPONENT__c</formula>
        <label>Converted VCID Comp OIC IP Component</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Converted_VCID_Comp_Program__c</fullName>
        <formula>Converted_IP_VCID_Component__r.PROGRAM__c</formula>
        <label>Converted VCID Comp Program</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customer__c</fullName>
        <description>Inbound data from GTO via AIA
Daily Refresh</description>
        <label>Customer</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DeviceId__c</fullName>
        <description>Inbound data from GTO via AIA
Daily Refresh</description>
        <label>DeviceId</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Library__c</fullName>
        <description>This is the VCID Sub Component</description>
        <label>Library</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MaskSetTitle__c</fullName>
        <description>Inbound data from GTO via AIA
Daily Refresh</description>
        <label>MaskSetTitle</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PTRFNumber__c</fullName>
        <description>Inbound data from GTO via AIA
Daily Refresh</description>
        <label>PTRFNumber</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ProcessID__c</fullName>
        <description>Inbound data from GTO via AIA
Daily Refresh</description>
        <label>ProcessID</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Remarks__c</fullName>
        <label>Remarks</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Converted</fullName>
                </value>
                <value>
                    <fullName>Unmap</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Sequence_Number__c</fullName>
        <externalId>true</externalId>
        <label>Sequence Number</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Technology__c</fullName>
        <description>Inbound data from GTO via AIA
Daily Refresh</description>
        <label>Technology</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Vendor__c</fullName>
        <description>Inbound data from GTO via AIA
Daily Refresh</description>
        <label>Vendor</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Version__c</fullName>
        <description>Inbound data from GTO via AIA
Daily Refresh</description>
        <label>Version</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <label>IP VCID Sub Component</label>
    <nameField>
        <label>IP VCID Sub Component ID</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>IP VCID Sub Component</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>